// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`description > renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_31__m4c9ow25"
      id="id"
      role="status"
    >
      Helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
      id="id"
      role="status"
    >
      Helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_captionSmall__m4c9owq style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
      id="id"
      role="status"
    >
      Helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with aria-describedby 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div>
      <label
        class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        id="id-label"
      >
        Label
      </label>
      <span
        class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_captionSmall__m4c9owq style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
        id="id-helper"
        role="status"
      >
        helper
      </span>
      <input
        aria-describedby="id-helper"
        aria-labelledby="id-label"
        data-testid="test-input"
        type="text"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`description > renders correctly with error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
      id="id"
      role="status"
    >
      Error
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with error disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_12__m4c9ow1m"
      id="id"
      role="status"
    >
      Error
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with error true 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
      id="id"
      role="status"
    >
      helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with helper ReactNode 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
      id="id"
      role="status"
    >
      <div>
        Helper
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with helper string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
      id="id"
      role="status"
    >
      Helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with success string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_success__m4c9owe style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_56__m4c9ow2u"
      id="id"
      role="status"
    >
      Success
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with success string disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_default__m4c9ow4 style_sentiment_success__m4c9owe style_variant_caption__m4c9owp style_undefined_compound_20__m4c9ow1u"
      id="id"
      role="status"
    >
      Success
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders correctly with success true 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_success__m4c9owe style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_56__m4c9ow2u"
      id="id"
      role="status"
    >
      Helper
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders errors when helper, error and sucess are defined 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
      id="id"
      role="status"
    >
      error
    </span>
  </div>
</DocumentFragment>
`;

exports[`description > renders success when helper and sucess are defined 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_success__m4c9owe style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_56__m4c9ow2u"
      id="id"
      role="status"
    >
      success
    </span>
  </div>
</DocumentFragment>
`;
